# distStlTaskDecomposition

./: .gitignore  README.md  control_module.py  decomposition_module.py  firstDecompositionExample.py  predicate_builder_module.py  pyproject.toml  randomTreeCreation.py  requirements.txt  secondExample.py  testEdgeMapping.py  thirdExample.py  visualization_module.py
dist_stl_dec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dist_stl_dec/gui/: easy_inial_conditions.py
dist_stl_dec/loggers/: loggers.py
dist_stl_dec/simulator/: sim.py
dist_stl_dec/stl/: graphs.py  stl.py
dist_stl_dec/stlcont/: controller.py  optimization_module.py
dist_stl_dec/stlddec/: decomposition.py  transport.py
simulations/publication/: centers.npy  initial_states.npy  martian_mission.py  new_task_graph.gpickle  simulation.py  stupid.md  test.py  visualize_saved_results.py
simulations/sim1/: martian_mission.py
simulations/simple/: simlation.py
simulations/simulation1/: simulation.py
simulations/simulation2/: simulation.py
simulations/simulation3/: simulation.py
simulations/tutorials/: task_and_communication_graph.py
src/loggers/: loggers.py
src/simulation/: sim.py
src/simulator/: sim.py
src/stl/: dynamics.py  graphs.py  stl.py
src/stlcont/: controller.py  optimization_module.py  utils.py
src/stlddec/: control.py  test.py  (+14 more)
tests/: application.py  decentralisedGraphSearch.py  graph_module_test.py  smooth_min_switch_test.py  smooth_min_visual.py  stl_task_module_test.py  test.py  test_controller.py  test_smooth_minimum_approximaiton.py  test_stupid.py
(+21 files in other folders)
